<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="welcome_text_first">Shop now for high quality skate shoes and streetwear inspired trainers from a wide range of skateboarding footwear brands, including Adidas, Converse, Emerica, eS, HUF, Lakai, New Balance, Nike SB and Vans. Browse through a broad selection of styles including slim and simple pumps, rubber toe capped classics or padded technical skate shoes. There are flexible vulcanised soles for added board feel and extra grip, or thicker cup soled shoes with support in the heel for impact absorption. Whether your looking for the support of a high top, the manoeuvrability of a low or something in the middle, there will be a sneaker that meets your needs.</string>
    <string name="welcome_text_second">Constructed from premium materials such as smooth leathers, hardy suedes, tough canvas and durable synthetics, skate footwear is built to last. Created with function and comfort in mind, nothing else will feel better on your foot.</string>
    <string name="go_to_instructions">Go to instructions</string>
    <string name="go_to_shoes_list">Go to list</string>
</resources>
